Fix autocomplete z-index

--- a/researcher-training-tool/css/dialog.css
+++ b/researcher-training-tool/css/dialog.css
@@ -16,6 +16,9 @@
 }
 
 /* results in 'Provided By' auto-complete field */
+.ui-autocomplete {
+  z-index: 20000000000 !important;
+}
 ul.researcher-training-tool-autocomplete.ui-autocomplete {
   width: 350px;
   margin: 0;
